#2401 [Fixed] Image: Large image overflows container
General max-inline-size set to 100%

--- a/packages/dso-toolkit/src/components/image/image.scss
+++ b/packages/dso-toolkit/src/components/image/image.scss
@@ -3,6 +3,7 @@
 img {
   border: 0;
   vertical-align: middle;
+  max-inline-size: 100%;
 }
 
 .img-responsive {
